--- a/css/style.css
+++ b/css/style.css
@@ -912,6 +912,10 @@ section.Industries-section {
   padding: 3rem 0 0;
 }
 
+.story-afms h2 {
+  font-size: 52px;
+}
+
 /* location section start */
 section.india-section {
   padding: 50px 0;
@@ -1508,7 +1512,7 @@ p.mile {
 }
 
 .apollo-owner {
-  text-align: center;
+  text-align: left;
 }
 
 .row.apollo-story {
@@ -2428,6 +2432,20 @@ img.iot-frame {
 
   .service-mobile {
     display: block !important;
+  }
+
+  .apollo-owner {
+    text-align: center;
+  }
+
+  .story-afms h2 {
+    font-size: 52px;
+    text-align: center;
+  }
+
+  .row.apollo-story {
+    align-items: center;
+    padding-top: 0px;
   }
 
   /* case study */
