--- a/css/style.css
+++ b/css/style.css
@@ -2298,6 +2298,13 @@ img.iot-frame {
   animation-duration: 1s !important;
 }
 
+@media screen and (max-width: 1400px) {
+  .seroffer-imgsec .service-bg {
+    width: 800px;
+    height: 880px;
+  }
+}
+
 /* Show burger icon on mobile */
 @media screen and (max-width: 1300px) {
   .consistent-cont h2 {
@@ -2365,6 +2372,16 @@ img.iot-frame {
   .tech-slide p {
     font-size: 18px;
   }
+
+  .seroffer-imgsec .service-bg {
+    width: 800px;
+    height: 880px;
+    transform: rotate(35deg);
+  }
+
+  section.Our-framework {
+    padding: 50px 0 50px;
+  }
 }
 
 @media screen and (max-width: 1100px) {
@@ -2424,6 +2441,12 @@ img.iot-frame {
 
   button.tab-button.Services-tabbtn {
     padding: 15px;
+  }
+
+  .seroffer-imgsec .service-bg {
+    width: 762px;
+    height: 800px;
+    transform: rotate(35deg);
   }
 }
 
