--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ section.consistent-section {
 .consistent-cont p {
   width: 100%;
   font-size: 25px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   color: #000;
 }
 
@@ -985,6 +985,7 @@ section.Industries-section {
 .industry-about h3 {
   color: #fff;
   font-size: 30px;
+  height: 35px;
 }
 
 .industry-about .your-trused-sub {
